--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
   <div class="container">
     <div class="row">
       <div class="one-half column" style="margin-top: 25%; float:left">
-        <h4>Hejsan</h4>
+        <h4>Botkommandon!</h4>
       </div>
             <div class="one-half column" style="margin-top: 12.5%; float:left">
         <h4>Commands
