--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
   <!-- Primary Page Layout
   –––––––––––––––––––––––––––––––––––––––––––––––––– -->
   <div class="container">
-            <div class="one-half column" style="margin-top: 12.5%; float:left">
+            <div class="one-half column" style="margin-top: 12.5%>
         <h4>
           <div class="md-content" data-md-component="content">
             <article class="md-content__inner md-typeset">
