--- a/index.html
+++ b/index.html
@@ -31,6 +31,13 @@
 
   <!-- Primary Page Layout
   –––––––––––––––––––––––––––––––––––––––––––––––––– -->
+  <div class="sixteen columns">
+    <div class="four columns offset-by-six">
+        <p>Lorem ipsum dolor sit amet.</p>
+    </div>
+  </div>
+
+  
   <div class="container">
             <div class="one-half column" style="margin-top: 12.5%>
         <h4>
