--- a/index.html
+++ b/index.html
@@ -31,15 +31,9 @@
 
   <!-- Primary Page Layout
   –––––––––––––––––––––––––––––––––––––––––––––––––– -->
-  <div class="sixteen columns">
-    <div class="four columns offset-by-six">
-        <p>Lorem ipsum dolor sit amet.</p>
-    </div>
-  </div>
-
   
   <div class="container">
-            <div class="one-half column" style="margin-top: 12.5%>
+            <div class="one-half column" style="margin-top: 12.5%; margin-left: 12.5%>
         <h4>
           <div class="md-content" data-md-component="content">
             <article class="md-content__inner md-typeset">
