--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
   –––––––––––––––––––––––––––––––––––––––––––––––––– -->
   
   <div class="container">
-            <div class="one-half column" style="margin-top: 12.5%; margin-left: 12.5%>
+            <div class="one-half column" style="margin-top: 12.5%; margin-left: width/2>
         <h4>
           <div class="md-content" data-md-component="content">
             <article class="md-content__inner md-typeset">
